# spark-shortcut-hub

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  database.rs  engine.rs  main.rs  vars.rs
src-tauri/src/expander/: hook_linux.rs  hook_mac.rs  hook_windows.rs  mod.rs
src/components/: AddFolderDialog.tsx  AddSnippetDialog.tsx  ImportDialog.tsx  LoginDialog.tsx  SearchBar.tsx  SettingsDialog.tsx  SnippetCard.tsx
src/lib/: tauri.ts
src/pages/: Index.tsx
